# tallii-platform

./: .env  Cargo.toml  Dockerfile.migrations.release  Dockerfile.release  README.md  api.spec.yaml  client-dev.http  client-prod.http  client.http
.github/workflows/: migrations.yaml  service.yaml
kubernetes/: deployment.yaml  ingress-protected.yaml  ingress.yaml  migrations.yaml  secrets.yaml
migrations/: 20210220013352_initial.sql  20220101213757_scoreboard_updated_at.sql  20220102170422_timezone-utc.sql  20220110193630_user-avatar.sql  20220110205422_avatar-emoji-fix.sql  20220207170201_teams_players.sql
scripts/: run_migrations.sh
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  routes.rs  token.rs  wrappers.rs
src/auth/: db.rs  handlers.rs  routes.rs  token.rs
src/games/: db.rs  handlers.rs  routes.rs
src/players/: db.rs  mod.rs
src/scoreboards/: db.rs  handlers.rs  routes.rs
src/search/: handlers.rs  routes.rs
src/teams/: db.rs  handlers.rs  routes.rs
src/users/: db.rs  handlers.rs  mod.rs  routes.rs  token.rs
